--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <button href="#" data-value="15" class="percent">15%</button>
               <button href="#" data-value="20" class="percent">20%</button>
               <button href="#" data-value="25" class="percent">25%</button>
-              <button href="#" class="custom">custom</button>
+              <input type="number" class="custom" placeholder="Custom">custom</button>
             </div>
             <label class="input-label"
               >Number of People <span id="people-error"></span
@@ -48,14 +48,14 @@
                 <h5>Tip Amount</h5>
                 <h6>/ person</h6>
               </div>
-              <h1 class="amount" id="tip-amount">$4.25</h1>
+              <h1 class="amount" id="tip-amount">$0.00</h1>
             </div>
             <div class="flex">
               <div class="flex-left">
                 <h5>Total</h5>
                 <h6>/ person</h6>
               </div>
-              <h1 class="amount" id="tip-amount">$32.79</h1>
+              <h1 class="amount" id="t-amount">$0.00</h1>
             </div>
             <div class="reset-container">
               <button class="reset" id="action-btn">Reset</button>
