--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label class="input-label sl">Select Tip %</label>
             <div class="tip-percent-container">
               <button href="#" data-value="5" class="percent">5%</button>
-              <button href="#" data-value="10" class="percent">10%</button>
+              <button href="#" data-value="10" class="percent active">10%</button>
               <button href="#" data-value="15" class="percent">15%</button>
               <button href="#" data-value="20" class="percent">20%</button>
               <button href="#" data-value="25" class="percent">25%</button>
